align to center

--- a/html/include/footer.html
+++ b/html/include/footer.html
@@ -1,6 +1,6 @@
 <br /><br /><br /><br />
 <br /><br /><br /><br />
-<b style="background-color: red;">(c) Copyright 2021 Cong ti ABC</b> <br /><br /><br />
+<div align="center"><b>(c) Copyright 2021 Cong ti ABC</b> <br /><br /><br /></div>
 <fieldset>
 <?php
 	echo " <legend><b>Thong tin ki thuat:</b></legend>
@@ -13,4 +13,3 @@
 </fieldset>
 </body>
 </html>
-
