--- a/html/securelocation0/include/header.html
+++ b/html/securelocation0/include/header.html
@@ -10,7 +10,10 @@
 <body>
 <p style="font-size:21px;">
 <a class="links" href="/securelocation0">Trang chu </a>
+<a class="links" href="/securelocation0/usertable.php">Quan li nguoi dung</a> 
+
 <a class="links" href="/logout.php">Dang xuat</a> 
+</p>
 <?php
 session_start();
 ?>
