--- a/html/securelocation0/include/header.html
+++ b/html/securelocation0/include/header.html
@@ -9,8 +9,9 @@
 
 <body>
 <p style="font-size:21px;">
-<a class="links" href="/securelocation0">Trang chu </a>
+<a class="links" href="/securelocation0/">Trang chu quan tri </a>
 <a class="links" href="/securelocation0/usertable.php">Quan li nguoi dung</a> 
+<a style="color: red" class="links" href="/">Trang chu</a>
 
 <a class="links" href="/logout.php">Dang xuat</a> 
 </p>
