requiring config.php

--- a/html/include/footer.html
+++ b/html/include/footer.html
@@ -8,6 +8,8 @@
 		HTTP_USER_AGENT: {$_SERVER['HTTP_USER_AGENT']} <br />
 		Duong dan toi kich ban hien tai: {$_SERVER['PHP_SELF']} <br />
 		Phan mem may chu web: {$_SERVER['SERVER_SOFTWARE']} <br />
+		<br />
+		{$_SERVER['SERVER_SIGNATURE']}
 	";
 	?>
 </fieldset>
