--- a/html/include/footer.html
+++ b/html/include/footer.html
@@ -1,5 +1,5 @@
-<br /><br /><br /><br />
-<div align="center"><b>(c) Copyright 2021 Cong ti ABC</b> <br /><br /><br /></div>
+<br />
+<div style="text-align: center;"><b>(c) Copyright 2021 Cong ti ABC</b> <br /><br /><br /></div>
 <fieldset>
 <?php
 	echo " <legend><b>Thong tin ki thuat:</b></legend>
