--- a/html/securelocation0/include/footer.html
+++ b/html/securelocation0/include/footer.html
@@ -1,5 +1,5 @@
-<br /><br /><br /><br />
-<div align="center"><b>(c) Copyright 2021 Cong ti ABC</b> <br /><br /><br /></div>
+<br />
+<div style="text-align: center;"><b>(c) Copyright 2021 Cong ti ABC</b> <br /><br /><br /></div>
 <fieldset>
 <?php
 	echo " <legend><b>Thong tin ki thuat:</b></legend>
@@ -7,6 +7,8 @@
 		HTTP_USER_AGENT: {$_SERVER['HTTP_USER_AGENT']} <br />
 		Duong dan toi kich ban hien tai: {$_SERVER['PHP_SELF']} <br />
 		Phan mem may chu web: {$_SERVER['SERVER_SOFTWARE']} <br />
+		<br />
+		{$_SERVER['SERVER_SIGNATURE']}
 	";
 	?>
 </fieldset>
