--- a/html/securelocation0/include/header.html
+++ b/html/securelocation0/include/header.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=<?php echo $charset; ?>">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title><?php echo $page_title; ?></title>
-<link rel="stylesheet" type="text/css" href="/include/style.css">
+<link rel="stylesheet" type="text/css" href="/include/style.css" />
 </head>
 
 <body>
